User Group API Completed in Admin